--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "specter-js",
   "version": "0.0.1",
-  "main": "src/core.js",
+  "main": "dist/specter-js.cjs.js",
+  "module": "dist/specter-js.esm.js",
+  "browser": "dist/specter-js.umd.js",
   "license": "MIT",
   "scripts": {
-    "test": "yarn jest"
+    "test": "yarn jest",
+    "start": "rollup -c -w",
+    "build": "rollup -c"
   },
   "dependencies": {
     "lodash": "^4.17.11"
   },
   "devDependencies": {
-    "jest": "^23.6.0"
+    "jest": "^23.6.0",
+    "rollup": "^0.66.6",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-node-resolve": "^3.4.0"
   }
 }
