Add transform benchmark

--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "scripts": {
     "test": "yarn jest",
     "start": "rollup -c -w",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "bench": "node ./benchmark/transform.js"
   },
   "dependencies": {
     "lodash": "^4.17.11"
   },
   "devDependencies": {
+    "benchmark": "^2.1.4",
     "jest": "^23.6.0",
     "rollup": "^0.66.6",
     "rollup-plugin-commonjs": "^9.2.0",
